# VKLite

./: CMakeLists.txt  vcpkg.json
src/: FileReader.cpp  FileReader.h  HelloTriangle.cpp  HelloTriangle.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  SwapChainSupportDetails.h  Vertex.h  main.cpp
